samples/_failures_safe/1761165770_e3ebaa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47944c0d.c: In function ‘main’:
./samples/SAFE/__tmp_47944c0d.c:146:5: error: expected declaration or statement at end of input
  146 |     printf("4. Transpose Matrix B\n");
      |     ^~~~~~
